--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "TestRepo"
-  },
+  "name": "TestRepo",
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
